Fixed the zooming / jumping issue!

--- a/res/css/style.css
+++ b/res/css/style.css
@@ -428,11 +428,12 @@ input[type="submit"]:hover, button:hover {
 	}
 
 	#main-content {
-		/* width:100%;
-		margin:0 auto; */
-		width:calc(100% - 4em);
-		max-width:calc(100% - 4em);
-		margin:0 2em auto;
+		/* width:100% !important;
+		margin:0 auto !important; */
+		min-width: calc(100% - 2em);
+		width:calc(100% - 2em);
+		max-width:calc(100% - 2em);
+		margin:0 1em auto;
 		margin-bottom: 2em;
 	}
 	
@@ -456,15 +457,12 @@ input[type="submit"]:hover, button:hover {
 		font-size:16px;
 		margin:0 auto;
 	}
-
-	/* .flaggy {
-		margin:-50px 0 0 25%;
-	} */
 	
 	.module-grid {
 		margin:0 auto;
 		min-width:100%;
 		width: 100%;
+		max-width: 100%;
 		padding:0;
 		display:block;
 		justify-content: center;
